--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0"
  WIDTH="954" HEIGHT="523" id="bloxors.swf" ALIGN="">
  <PARAM NAME=menu VALUE=false>
- <PARAM NAME=movie VALUE="bloxors.swf"> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE=#F4E2BE> <EMBED src="bloxors.swf" quality=high bgcolor=#F4E2BE  WIDTH="954" HEIGHT="523" NAME="bloxors" ALIGN=""
+ <PARAM NAME=movie VALUE="bloxors.swf"> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE=#000000> <EMBED src="bloxors.swf" quality=high bgcolor=#000000  WIDTH="954" HEIGHT="523" NAME="bloxors" ALIGN=""
  TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer"></EMBED>
 </OBJECT>
 </body>
